--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,12 +13,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: 📂 Sync files
-        uses: SamKirkland/FTP-Deploy-Action@4.3.0
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_SECRET }}
           server-dir: public_html/
-          exclude: | 
+          exclude: |
             **/wp-content/uploads/**
             .htaccess
